oasp/oasp4j#392: heavy rework of archetype

--- a/templates/server/src/main/resources/archetype-resources/__earProjectName__/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/__earProjectName__/pom.xml
@@ -6,10 +6,8 @@
 		<artifactId>${artifactId}</artifactId>
 		<version>${version}</version>
 	</parent>
-
-	<groupId>${groupId}</groupId>
 	<artifactId>${earProjectName}</artifactId>
-	<name>${earProjectName}</name>
+  <name>${project.artifactId}</name>
 	<description>Enterprise application packaging.</description>
 	<packaging>ear</packaging>
 
