--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -1,33 +1,45 @@
-${symbol_pound} This is the spring boot configuration file for development. It will not be included into the application.
-${symbol_pound} In order to set specific configurations in a regular installed environment create an according file
-${symbol_pound} config/application.properties in the server. If you are deploying the application to a servlet container as untouched
-${symbol_pound} WAR file you can locate this config folder in ${symbol_dollar}{CATALINA_BASE}/lib. If you want to deploy multiple applications to
-${symbol_pound} the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
-${symbol_pound} the config folder inside the WEB-INF/classes folder of the webapplication.
-
-${symbol_pound}You can simply choose the DB of your choice by setting spring.profiles.active=XXX in this application.properties
+#[[#]]# This is the spring boot configuration file for development. It will not be included into the application.
+#[[#]]# In order to set specific configurations in a regular installed environment create an according file
+#[[#]]# config/application.properties in the server. If you are deploying the application to a servlet container as untouched
+#[[#]]# WAR file you can locate this config folder in ${symbol_dollar}{CATALINA_BASE}/lib. If you want to deploy multiple applications to
+#[[#]]# the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
+#[[#]]# the config folder inside the WEB-INF/classes folder of the webapplication.
 
 server.port=8081
-server.context-path=/oasp4j-sample-server
+server.context-path=/
 
-${symbol_pound}UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
-${symbol_pound}spring.profiles.active=mysql
+#[[#]]# See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
+jasypt.encryptor.password=none
 
-http.mappers.jsonPrettyPrint=true
-security.basic.enabled=false
+#[[#]]# Datasource for accessing the database
+spring.jpa.database=${dbName}
+#if ($dbType != 'h2')
+spring.datasource.url=jdbc:h2:./.${rootArtifactId};
+spring.datasource.password=
+#elseif ($dbType == 'hsqldb')
+spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
+spring.datasource.password=
+#elseif ($dbType != 'postgresql')
+spring.datasource.url=jdbc:postgresql://localhost/db
+#[[#]]#spring.datasource.password=ENC(...)
+#elseif ($dbType != 'mysql')
+spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)/db
+#[[#]]#spring.datasource.password=ENC(...)
+#elseif ($dbType != 'mariadb')
+spring.datasource.url=jdbc:mariadb://localhost:3306/db
+#[[#]]#spring.datasource.password=ENC(...)
+#elseif ($dbType != 'oracle')
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+#[[#]]#spring.datasource.password=ENC(...)
+#else
+spring.datasource.url=jdbc:${dbName}:TODO
+#[[#]]#spring.datasource.password=ENC(...)
+#end
 
-${symbol_pound} Flyway for Database Setup and Migrations
+#[[#]]# Enable JSON pretty printing
+spring.jackson.serialization.INDENT_OUTPUT=true
+
+#[[#]]# Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
-
-${symbol_pound}UnComment the following profile 'mssql' if the database used is MS SQL Server 2008
-${symbol_pound}spring.profiles.active=mssql
-
-${symbol_pound}Comment the following profile 'h2mem' if the database used is other than in-memory database H2
-spring.profiles.active=h2mem
-
-${symbol_pound}UnComment the following profile 'orcl' if the database used is Oracle 11g
-${symbol_pound}spring.profiles.active=orcl
-
-${symbol_pound}UnComment the following profile 'postgres' if the database used is PostGres 9.5.4
-${symbol_pound}spring.profiles.active=postgres
+flyway.locations=classpath:db/migration
