--- a/templates/server/src/main/resources/archetype-resources/core/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/core/pom.xml
@@ -14,11 +14,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-batch</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>${rootArtifactId}-api</artifactId>
       <version>${project.version}</version>
@@ -115,8 +110,39 @@
 
     <!-- Database -->
     <dependency>
+#if ($dbType != 'h2')
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+#elseif ($dbType == 'hsqldb')
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+#elseif ($dbType != 'postgresql')
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4.1211.jre7</version>
+#elseif ($dbType != 'mysql')
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.8-dmr</version>
+#elseif ($dbType != 'mariadb')
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>1.5.4</version>
+#elseif ($dbType != 'oracle')
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc6</artifactId>
+      <version>11.2.0</version>
+#else
+      <groupId>$dbType</groupId>
+      <artifactId>$dbType</artifactId>
+      <version>TODO</version>
+#end
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -210,35 +236,8 @@
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
       <version>1.3.0</version>
-    <scope>test</scope>
+      <scope>test</scope>
     </dependency>
-
-	  <!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
-    <!--
-      <dependency>
-        <groupId>org.mariadb.jdbc</groupId>
-        <artifactId>mariadb-java-client</artifactId>
-        <version>1.5.4</version>
-      </dependency>
-    -->
-
-    <!-- Uncomment the following dependency if the database used is Oracle 11g -->
-    <!--
-      <dependency>
-        <groupId>com.oracle</groupId>
-        <artifactId>ojdbc6</artifactId>
-        <version>11.2.0</version>
-      </dependency>
-     -->
-
-    <!-- Comment the following dependency if the database that is used is PostGres 9 -->
-    <!--
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4.1211.jre7</version>
-    </dependency>
-    -->
   </dependencies>
 
   <profiles>
@@ -248,10 +247,10 @@
        <activeByDefault>true</activeByDefault>
       </activation>
       <dependencies>
-         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <version>${spring.boot.version}</version>
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+          <version>${spring.boot.version}</version>
         </dependency>
       </dependencies>
     </profile>
