--- a/templates/server/src/main/resources/archetype-resources/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/pom.xml
@@ -19,8 +19,11 @@
   <modules>
     <module>api</module>
     <module>core</module>
-#if($earProjectName != '.')
+#if ($earProjectName != '.')
     <module>${earProjectName}</module>
+#end
+#if ($batch == 'batch')
+    <module>batch</module>
 #end
     <module>server</module>
   </modules>
