--- a/templates/server/src/main/resources/archetype-resources/server/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/server/pom.xml
@@ -7,7 +7,6 @@
     <artifactId>${rootArtifactId}</artifactId>
     <version>${version}</version>
   </parent>
-  <groupId>${groupId}</groupId>
   <artifactId>${rootArtifactId}-server</artifactId>
   <packaging>war</packaging>
   <name>${project.artifactId}</name>
@@ -23,6 +22,13 @@
       <artifactId>${rootArtifactId}-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+#if ($batch == 'batch')
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>${rootArtifactId}-batch</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+#end
  </dependencies>
 
   <profiles>
