--- a/templates/server/src/test/resources/projects/batch/archetype.properties
+++ b/templates/server/src/test/resources/projects/batch/archetype.properties
@@ -2,7 +2,7 @@
 package=it.pkg
 version=1.0.0-SNAPSHOT
 groupId=archetype.it
-artifactId=basic
+artifactId=app-with-batch
 earProjectName=.
-batch=.
-dbType=h2
+batch=batch
+dbType=mysql
