--- a/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
@@ -1,6 +1,6 @@
-#[[#]]# This is the spring boot configuration file for JUnit tests. It will only affect JUnits and is not included into the application.
+# This is the spring boot configuration file for JUnit tests. It will only affect JUnits and is not included into the application.
 spring.profiles.active=junit
 
-#[[#]]# Flyway for Database Setup and Migrations
+# Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.locations=db/migration
