--- a/templates/server/pom.xml
+++ b/templates/server/pom.xml
@@ -26,7 +26,7 @@
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
         <artifactId>archetype-packaging</artifactId>
-        <version>2.2</version>
+        <version>${maven.archetype.version}</version>
       </extension>
     </extensions>
 
@@ -42,11 +42,8 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <!--<settingsFile>${project.build.testResources[0].directory}/settings.xml</settingsFile>-->
-        </configuration>
       </plugin>
     </plugins>
   </build>
