--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -181,6 +181,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency> 
          
     <dependency>
       <groupId>org.springframework.boot</groupId>
