--- a/starters/starter-spring-data-jpa/pom.xml
+++ b/starters/starter-spring-data-jpa/pom.xml
@@ -14,6 +14,10 @@
   <name>${project.artifactId}</name>
   <description>Advanced spring-data support for OASP.</description>
 
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
@@ -22,6 +26,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
