--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,21 @@
           <version>${servicedocgen.version}</version>
         </plugin>
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>1.14</version>        
+          <configuration>
+            <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
+            <sortArtifactByName>true</sortArtifactByName>
+            <includeTransitiveDependencies>true</includeTransitiveDependencies>
+            <useMissingFile>true</useMissingFile>
+            <!--<failOnMissing>true</failOnMissing>-->
+            <licenseMerges>
+              <licenseMerge>Apache Software License, Version 2.0|The Apache Software License, Version 2.0|Apache 2.0|Apache License, Version 2.0</licenseMerge>
+            </licenseMerges>
+          </configuration>          
+        </plugin>
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.0</version>
@@ -424,6 +439,18 @@
             </javadocs>
           </descriptor>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>third-party-report</report>
+              <report>aggregate-third-party-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
@@ -525,6 +552,34 @@
           <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
       </distributionManagement>
+    </profile>
+    <profile>
+      <id>licenses</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>aggregate-download-licenses</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>aggregate-download-licenses</goal>
+                </goals>
+              </execution>
+              
+              <execution>
+                <id>aggregate-add-third-party</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>aggregate-add-third-party</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <!-- separate eclipse build from command-line... -->
