--- a/templates/server/src/main/resources/archetype-resources/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/pom.xml
@@ -265,6 +265,21 @@
           <artifactId>dependency-check-maven</artifactId>
           <version>3.1.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>1.14</version>        
+          <configuration>
+            <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
+            <sortArtifactByName>true</sortArtifactByName>
+            <includeTransitiveDependencies>true</includeTransitiveDependencies>
+            <useMissingFile>true</useMissingFile>
+            <failOnMissing>true</failOnMissing>
+            <licenseMerges>
+              <licenseMerge>Apache Software License, Version 2.0|The Apache Software License, Version 2.0|Apache 2.0|Apache License, Version 2.0</licenseMerge>
+            </licenseMerges>
+          </configuration>          
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -332,6 +347,34 @@
                   <goal>check</goal>
                 </goals>
               </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>licenses</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>aggregate-add-third-party</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>aggregate-add-third-party</goal>
+                </goals>
+              </execution>
+              
+              <execution>
+                <id>aggregate-download-licenses</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>aggregate-download-licenses</goal>
+                </goals>
+              </execution>          
             </executions>
           </plugin>
         </plugins>
@@ -410,6 +453,18 @@
             </schemes>
           </descriptor>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>third-party-report</report>
+              <report>aggregate-third-party-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
