#629: fixed version of spring-boot-maven-plugin to try if travis now passes (locally not reproducible even with Java 1.7)

--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,11 @@
           <artifactId>dependency-check-maven</artifactId>
           <version>3.1.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>1.5.7.RELEASE</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
