--- a/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
@@ -1,6 +1,13 @@
 # This is the spring boot configuration file for JUnit tests. It will only affect JUnits and is not included into the application.
 spring.profiles.active=junit
 
+# Database and JPA
+spring.jpa.database=h2
+spring.datasource.url=jdbc:h2:./.${rootArtifactId};
+spring.datasource.password=
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=none
+
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.locations=db/migration
