--- a/templates/server/src/main/resources/archetype-resources/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/pom.xml
@@ -13,7 +13,7 @@
     <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <oasp.test.excluded.groups>io.oasp.module.test.common.api.category.CategorySubsystemTest,io.oasp.module.test.common.api.category.CategorySystemTest</oasp.test.excluded.groups>
+    <oasp.test.excluded.groups>io.oasp.module.test.common.api.category.CategorySystemTest</oasp.test.excluded.groups>
   </properties>
 
   <modules>
@@ -73,14 +73,14 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-      
+
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludedGroups>${oasp.test.excluded.groups}</excludedGroups>
         </configuration>
       </plugin>
-      
+
       <!-- JaCoCo for test coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -268,7 +268,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>1.14</version>        
+          <version>1.14</version>
           <configuration>
             <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
             <sortArtifactByName>true</sortArtifactByName>
@@ -278,7 +278,7 @@
             <licenseMerges>
               <licenseMerge>Apache Software License, Version 2.0|The Apache Software License, Version 2.0|Apache 2.0|Apache License, Version 2.0</licenseMerge>
             </licenseMerges>
-          </configuration>          
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -372,14 +372,14 @@
                   <goal>aggregate-add-third-party</goal>
                 </goals>
               </execution>
-              
+
               <execution>
                 <id>aggregate-download-licenses</id>
                 <phase>generate-resources</phase>
                 <goals>
                   <goal>aggregate-download-licenses</goal>
                 </goals>
-              </execution>          
+              </execution>
             </executions>
           </plugin>
         </plugins>
