#629: reworked maven archetype layout, giving up with maven-archetype solution to include only DDLs for selected vendor ($dbType) and instead include all as separated folders and choose via spring config, split DDL SQL into small aspects, added oracle variants, still we need DDL SQLs for mysql and postgres (and ideally hana)

--- a/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
-flyway.locations=db/migration
+flyway.locations=classpath:db/migration,classpath:db/type/h2
