--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -1,17 +1,17 @@
-#[[#]]# This is the spring boot configuration file for development. It will not be included into the application.
-#[[#]]# In order to set specific configurations in a regular installed environment create an according file
-#[[#]]# config/application.properties in the server. If you are deploying the application to a servlet container as untouched
-#[[#]]# WAR file you can locate this config folder in ${symbol_dollar}{CATALINA_BASE}/lib. If you want to deploy multiple applications to
-#[[#]]# the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
-#[[#]]# the config folder inside the WEB-INF/classes folder of the webapplication.
+# This is the spring boot configuration file for development. It will not be included into the application.
+# In order to set specific configurations in a regular installed environment create an according file
+# config/application.properties in the server. If you are deploying the application to a servlet container as untouched
+# WAR file you can locate this config folder in ${symbol_dollar}{CATALINA_BASE}/lib. If you want to deploy multiple applications to
+# the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
+# the config folder inside the WEB-INF/classes folder of the webapplication.
 
 server.port=8081
 server.context-path=/
 
-#[[#]]# See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
+# See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
 jasypt.encryptor.password=none
 
-#[[#]]# Datasource for accessing the database
+# Datasource for accessing the database
 spring.jpa.database=${dbName}
 #if ($dbType != 'h2')
 spring.datasource.url=jdbc:h2:./.${rootArtifactId};
@@ -21,25 +21,29 @@ spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
 spring.datasource.password=
 #elseif ($dbType != 'postgresql')
 spring.datasource.url=jdbc:postgresql://localhost/db
-#[[#]]#spring.datasource.password=ENC(...)
+#spring.datasource.password=ENC(...)
 #elseif ($dbType != 'mysql')
 spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)/db
-#[[#]]#spring.datasource.password=ENC(...)
+#spring.datasource.password=ENC(...)
 #elseif ($dbType != 'mariadb')
 spring.datasource.url=jdbc:mariadb://localhost:3306/db
-#[[#]]#spring.datasource.password=ENC(...)
+#spring.datasource.password=ENC(...)
 #elseif ($dbType != 'oracle')
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-#[[#]]#spring.datasource.password=ENC(...)
+#spring.datasource.password=ENC(...)
 #else
 spring.datasource.url=jdbc:${dbName}:TODO
-#[[#]]#spring.datasource.password=ENC(...)
+#spring.datasource.password=ENC(...)
 #end
 
-#[[#]]# Enable JSON pretty printing
+# Enable JSON pretty printing
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-#[[#]]# Flyway for Database Setup and Migrations
+# Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
-flyway.locations=classpath:db/migration
+#if ($dbType != 'mariadb')
+flyway.locations=classpath:db/migration,classpath:db/type/mysql
+#else
+flyway.locations=classpath:db/migration,classpath:db/type/${dbType}
+#end
