--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
@@ -52,3 +52,10 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # might otherwise lead to errors if job parameters are needed (or lead to unwanted modifications and longer startup times)
 # see http://stackoverflow.com/questions/22318907/how-to-stop-spring-batch-scheduled-jobs-from-running-at-first-time-when-executin
 spring.batch.job.enabled=false
+
+# Flyway for Database Setup and Migrations
+#if ($dbType != 'mariadb')
+flyway.locations=classpath:db/migration,classpath:db/type/mysql
+#else
+flyway.locations=classpath:db/migration,classpath:db/type/${dbType}
+#end
