--- a/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=junit
 
 # Database and JPA
 spring.jpa.database=h2
-spring.datasource.url=jdbc:h2:./.${rootArtifactId};
+spring.datasource.url=jdbc:h2:mem:app;
 spring.datasource.password=
 spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=none
