#629: fixed DB toggle config

--- a/templates/server/src/main/resources/archetype-resources/core/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/core/pom.xml
@@ -110,30 +110,30 @@
 
     <!-- Database -->
     <dependency>
-#if ($dbType != 'h2')
+#if ($dbType == 'h2')
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
 #elseif ($dbType == 'hsqldb')
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.4.0</version>
-#elseif ($dbType != 'postgresql')
+#elseif ($dbType == 'postgresql')
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <!--<version>9.4.1211.jre7</version>-->
-#elseif ($dbType != 'mysql')
+#elseif ($dbType == 'mysql')
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.8-dmr</version>
-#elseif ($dbType != 'mariadb')
+#elseif ($dbType == 'mariadb')
       <groupId>org.mariadb.jdbc</groupId>
       <artifactId>mariadb-java-client</artifactId>
       <version>1.5.4</version>
-#elseif ($dbType != 'oracle')
+#elseif ($dbType == 'oracle')
       <groupId>com.oracle</groupId>
       <artifactId>ojdbc6</artifactId>
       <version>11.2.0</version>
-#elseif ($dbType != 'mssql')
+#elseif ($dbType == 'mssql')
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
       <version>6.4.0.jre8</version>
@@ -143,11 +143,13 @@
       <version>TODO</version>
 #end
     </dependency>
+#if ($dbType != 'h2')
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
+#end
 
     <dependency>
       <groupId>org.flywaydb</groupId>
