--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -12,27 +12,26 @@ server.context-path=/
 jasypt.encryptor.password=none
 
 # Datasource for accessing the database
-spring.jpa.database=${dbName}
-#if ($dbType != 'h2')
+#if ($dbType == 'h2')
 spring.datasource.url=jdbc:h2:./.${rootArtifactId};
 spring.datasource.password=
 #elseif ($dbType == 'hsqldb')
 spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
 spring.datasource.password=
-#elseif ($dbType != 'postgresql')
+#elseif ($dbType == 'postgresql')
 spring.datasource.url=jdbc:postgresql://localhost/db
 #spring.datasource.password=ENC(...)
-#elseif ($dbType != 'mysql')
+#elseif ($dbType == 'mysql')
 spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)/db
 #spring.datasource.password=ENC(...)
-#elseif ($dbType != 'mariadb')
+#elseif ($dbType == 'mariadb')
 spring.datasource.url=jdbc:mariadb://localhost:3306/db
 #spring.datasource.password=ENC(...)
-#elseif ($dbType != 'oracle')
+#elseif ($dbType == 'oracle')
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
 #spring.datasource.password=ENC(...)
 #else
-spring.datasource.url=jdbc:${dbName}:TODO
+spring.datasource.url=jdbc:${dbType}:TODO
 #spring.datasource.password=ENC(...)
 #end
 
