#627: deprecated custom paging support for the sake of spring-data

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -358,6 +358,11 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-basic</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-jpa-envers</artifactId>
         <version>${project.version}</version>
       </dependency>
