--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -28,6 +28,7 @@
     <module>cxf-server-ws</module>
     <module>security</module>
     <module>jpa</module>
+    <module>jpa-basic</module>
     <module>jpa-dao</module>
     <module>jpa-envers</module>
     <module>jpa-spring-data</module>
