#629: fixed mariadb trouble and quotation for oracle

--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
@@ -58,7 +58,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.batch.job.enabled=false
 
 # Flyway for Database Setup and Migrations
-#if ($dbType != 'mariadb')
+#if ($dbType == 'mariadb')
 flyway.locations=classpath:db/migration,classpath:db/type/mysql
 #else
 flyway.locations=classpath:db/migration,classpath:db/type/${dbType}
