--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -8,31 +8,31 @@
 server.port=8081
 server.context-path=/
 
-# See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
-jasypt.encryptor.password=none
-
 # Datasource for accessing the database
+# See https://github.com/oasp/oasp4j/wiki/guide-configuration#security
+#jasypt.encryptor.password=none
+#spring.datasource.password=ENC(7CnHiadYc0Wh2FnWADNjJg==)
 #if ($dbType == 'h2')
+spring.datasource.password=
 spring.datasource.url=jdbc:h2:./.${rootArtifactId};
-spring.datasource.password=
 #elseif ($dbType == 'hsqldb')
-spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
 spring.datasource.password=
+spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
 #elseif ($dbType == 'postgresql')
+spring.datasource.password=todo
 spring.datasource.url=jdbc:postgresql://localhost/db
-#spring.datasource.password=ENC(...)
 #elseif ($dbType == 'mysql')
+spring.datasource.password=todo
 spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)/db
-#spring.datasource.password=ENC(...)
 #elseif ($dbType == 'mariadb')
+spring.datasource.password=todo
 spring.datasource.url=jdbc:mariadb://localhost:3306/db
-#spring.datasource.password=ENC(...)
 #elseif ($dbType == 'oracle')
+spring.datasource.password=todo
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-#spring.datasource.password=ENC(...)
 #else
+spring.datasource.password=todo
 spring.datasource.url=jdbc:${dbType}:TODO
-#spring.datasource.password=ENC(...)
 #end
 
 # Enable JSON pretty printing
