--- a/templates/server/src/main/resources/archetype-resources/server/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/server/pom.xml
@@ -13,7 +13,7 @@
   <description>Server for the ${rootArtifactId} application - a simple example using the Open Application Standard Platform for Java (OASP4J).</description>
 
   <properties>
-      <java.version>1.7</java.version>
+    <java.version>1.7</java.version>
   </properties>
 
   <dependencies>
@@ -22,20 +22,24 @@
       <artifactId>${rootArtifactId}-core</artifactId>
       <version>${project.version}</version>
     </dependency>
-#if ($batch == 'batch')
+    #if ($batch == 'batch')
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>${rootArtifactId}-batch</artifactId>
       <version>${project.version}</version>
     </dependency>
-#end
- </dependencies>
+    #end
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+  </dependencies>
 
   <profiles>
     <profile>
       <id>jsclient</id>
       <activation>
-        <!--<activeByDefault>true</activeByDefault>-->
+        <!--<activeByDefault>true</activeByDefault> -->
         <activeByDefault>false</activeByDefault>
       </activation>
       <build>
@@ -129,12 +133,12 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-            <configuration>
-              <mainClass>${package}.SpringBootApp</mainClass>
-              <classifier>bootified</classifier>
-              <finalName>${project.artifactId}</finalName>
-            </configuration>
-                                <executions>
+        <configuration>
+          <mainClass>${package}.SpringBootApp</mainClass>
+          <classifier>bootified</classifier>
+          <finalName>${project.artifactId}</finalName>
+        </configuration>
+        <executions>
           <execution>
             <goals>
               <goal>repackage</goal>
