oasp/oasp4j#623: next try to force travis to build the thing

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 dist: precise
 jdk:
   - oraclejdk7
-script: 
+before_script:
  - mvn install -pl :oasp4j-minimal-bom
+script: 
  - mvn install
 sudo: false
