oasp/oasp4j#623: travis keeps failing - hacking badly

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ dist: trusty
 jdk:
   - oraclejdk8
 install:
- - mvn install -pl :oasp4j-minimal-bom
+ - mvn -N install
+ - cd boms/minimal
+ - mvn install
+ - cd ../..
 script: 
  - mvn install
 sudo: false
