oasp/oasp4j#623: back to jdk7 and precise to see if that still works (so we can wait for that upgrade till 3.0.0 is open)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
-dist: trusty
+dist: precise
+#dist: trusty
 jdk:
-  - oraclejdk8
+  - oraclejdk7
+#  - oraclejdk8
 install:
  - mvn -N install
  - cd boms/minimal
