oasp/oasp4j#623: reverting backport to jdk7 as travis insists on raising strange errors. Giving up.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: java
-dist: precise
-#dist: trusty
+dist: trusty
 jdk:
-  - oraclejdk7
-#  - oraclejdk8
+  - oraclejdk8
 install:
  - mvn -N install
  - cd boms/minimal
