--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: java
 dist: precise
 jdk:
   - oraclejdk7
+install:
+ - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dhttps.protocols=TLSv1.2 -B -V
 script: mvn install
 sudo: false
