--- a/templates/server/pom.xml
+++ b/templates/server/pom.xml
@@ -36,7 +36,7 @@
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
           <delimiters>
-            <delimiter>^*^</delimiter>
+            <delimiter>$[*]</delimiter>
           </delimiters>
           <useDefaultDelimiters>false</useDefaultDelimiters>
         </configuration>
