Upgrade of third party libraries

--- a/modules/logging/pom.xml
+++ b/modules/logging/pom.xml
@@ -51,6 +51,10 @@
       <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
