--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -39,5 +39,5 @@ spring.datasource.url=jdbc:${dbType}:TODO
 spring.jackson.serialization.INDENT_OUTPUT=true
 
 # Flyway for Database Setup and Migrations
-flyway.enabled=true
-flyway.clean-on-validation-error=true
+spring.flyway.enabled=true
+spring.flyway.clean-on-validation-error=true
