--- a/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/test/resources/config/application.properties
@@ -9,5 +9,5 @@ spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=none
 
 # Flyway for Database Setup and Migrations
-flyway.enabled=true
-flyway.locations=classpath:db/migration,classpath:db/type/h2
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration,classpath:db/type/h2
