--- a/boms/bom/pom.xml
+++ b/boms/bom/pom.xml
@@ -19,7 +19,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <cxf.version>3.1.9</cxf.version>
+    <cxf.version>3.2.5</cxf.version>
     <mmm.util.version>7.5.1</mmm.util.version>
     <oasp.flatten.mode>bom</oasp.flatten.mode>
   </properties>
@@ -108,12 +108,6 @@
         <artifactId>cglib</artifactId>
         <version>3.2.5</version>
       </dependency>
-      <!-- Support for dynamic and type-safe JPA queries -->
-      <dependency>
-        <groupId>com.querydsl</groupId>
-        <artifactId>querydsl-jpa</artifactId>
-        <version>4.1.4</version>
-      </dependency>
       <!-- DataBase Connection Pooling -->
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -143,7 +137,7 @@
       <dependency>
         <groupId>javax.ws.rs</groupId>
         <artifactId>javax.ws.rs-api</artifactId>
-        <version>2.0.1</version>
+          <version>2.1</version>
       </dependency>
       <!-- CXF for REST and Webservices -->
       <dependency>
@@ -180,6 +174,12 @@
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-rs-client</artifactId>
         <version>${cxf.version}</version>
+      </dependency>
+      <!-- Json Dependency -->
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20180130</version>
       </dependency>
       <!-- Jackson for JSON mapping -->
       <dependency>
@@ -240,7 +240,7 @@
       <dependency>
         <groupId>javax.el</groupId>
         <artifactId>javax.el-api</artifactId>
-        <version>2.2.4</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.web</groupId>
