#665: fixed envers version (from spring-boot), fixed javadoc link syntax, preparation for #667 via commented out dependencies

--- a/modules/jpa-basic/pom.xml
+++ b/modules/jpa-basic/pom.xml
@@ -19,6 +19,12 @@
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-basic</artifactId>
     </dependency>
+    <!--
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+    </dependency>
+    -->
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.1-api</artifactId>
