--- a/boms/bom/pom.xml
+++ b/boms/bom/pom.xml
@@ -98,11 +98,13 @@
         <artifactId>hibernate-jpa-2.1-api</artifactId>
         <version>1.0.0.Final</version>
       </dependency>
+      <!--
       <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-envers</artifactId>
-        <version>4.3.5.Final</version>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>2.2</version>
       </dependency>
+      -->
       <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
