#671: add support for hana as dbType

--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
@@ -39,6 +39,10 @@ spring.datasource.username=${rootArtifactId}
 # spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 # spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=${rootArtifactId}
+#elseif ($dbType == 'hana')
+# spring.jpa.database-platform=org.hibernate.dialect.HANAColumnStoreDialect
+# spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
+spring.datasource.username=${rootArtifactId}
 #elseif ($dbType == 'oracle')
 # spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 # spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
