--- a/templates/server/src/main/resources/archetype-resources/core/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/core/pom.xml
@@ -143,6 +143,10 @@
       <groupId>org.mariadb.jdbc</groupId>
       <artifactId>mariadb-java-client</artifactId>
       <version>1.5.4</version>
+#elseif ($dbType == 'hana')
+      <groupId>com.sap.cloud.db.jdbc</groupId>
+      <artifactId>ngdbc</artifactId>
+      <version>2.3.48</version>
 #elseif ($dbType == 'oracle')
       <groupId>com.oracle.jdbc</groupId>
       <artifactId>ojdbc8</artifactId>
