--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -27,6 +27,9 @@ spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3
 #elseif ($dbType == 'mariadb')
 spring.datasource.password=todo
 spring.datasource.url=jdbc:mariadb://localhost:3306/db
+#elseif ($dbType == 'hana')
+spring.datasource.password=todo
+spring.datasource.url=jdbc:sap://localhost:39015
 #elseif ($dbType == 'oracle')
 spring.datasource.password=todo
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
