Spring boot upgrade issue for mysql #674

--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/config/application.properties
@@ -21,6 +21,7 @@ spring.datasource.url=jdbc:hsqldb:file:./.${rootArtifactId}
 #elseif ($dbType == 'postgresql')
 spring.datasource.password=todo
 spring.datasource.url=jdbc:postgresql://localhost/db
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #elseif ($dbType == 'mysql')
 spring.datasource.password=todo
 spring.datasource.url=jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)/db
